<resources>
    <string name="app_name">Handicraft Myanmar</string>


    <string name="detai_name">Item Detail</string>

    <string name="hello_world">Hello world!</string>
    <string name="drawer_action">Settings</string>
    <!--drawer-->
    <string name="nav_home">Home</string>
    <string name="nav_sale">Sale</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_contact">Contact Us</string>

    <string name="nav_about">About</string>
    <string name="nav_privacy">Privacy Policy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>

    <string name="cd_navdrawer_image">Navigation Drawer Image</string>
    <string name="cd_navdrawer_user_picture">User Profile Image</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="nav_sub_header">Sub header</string>
    <string name="nav_sub_item_1">Sub title 1</string>
    <string name="nav_sub_item_2">Sub title 2</string>
    <string name="advise">Please login to explore huge handicraft of Myanmar from Handicraft Myanmar application</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="image">"ဓာတ်ပုံ"</string>
    <string name="name">"ပစ္စည်းအမည်"</string>
    <string name="description">"ဖော်ပြချက်"</string>
    <string name="price">"ဈေးနှုန်း"</string>
    <string name="size">" အရွယ်အစား"</string>
    <string name="quantity">"ရနိင်သောပမာဏ"</string>
    <string name="delivery">"Delivery"</string>
    <string name="phone">"ဖုန်းနံပါတ်"</string>
    <string name="mail">"Mail"</string>
    <string name="address">"လိပ်စာ"</string>
    <string name="upload">"တင်မည်"</string>

    <string-array name="region">
        <item>ရန်ကုန်တိုင်း</item>
        <item>မန္တလေးတိုင်း</item>
        <item>ကချင်ပြည်နယ်</item>
        <item>ကယားပြည်နယ်</item>
        <item>ကရင်ပြည်နယ်</item>
        <item>ချင်းပြည်နယ်</item>
        <item>စစ်ကိုင်းတိုင်း</item>
        <item>တနင်္သာရီတိုင်း</item>
        <item>ပဲခူးတိုင်း(အရှ့)</item>
        <item>ပဲခူးတိုင်း(အနောက်)</item>
        <item>မကွေးတိုင်း</item>
        <item>မွန်ပြည်နယ်</item>
        <item>ရခိုင်တိုင်း</item>
        <item>ရှမ်းပြည်နယ်(တောင်)</item>
        <item>ရှမ်းပြည်နယ်(မြောက်)</item>
        <item>ရှမ်းပြည်နယ်(အရှေ့)</item>
        <item>ဧရာဝတီတိုင်း</item>
        <item>နေပြည်တော်</item>
    </string-array>

    <string name="about">မြန်မာနိုင်ငံမှာ လက်မှုပညာ က ထင်ရှာသောလုပ်ငန်း တစ်ခုဖြစ်ပါတယ် ။သို့သော်လည်း လက်မှု ပညာသည်တွေဟာ သူတို့ ထုတ်ကုန်တွေရဲ့ အမှန်တကယ် ဈေး နှုန်း တွေကို မရကြပါဘူး။ ဒါ့အပြင် လုပ်ငန်းအများစုက အိမ်လုပ်ငန်းများဖြစ်တဲ့အတွက် ထု?တ်ကုန်တွေကို လူသိများအောင်လုပ်ဖို့. အခွင့်အရေးလည်းမရကြပါဘူး ။ ထို့ကြောင့် မြန်မာနိုင်ငံမှာရှိတဲ့ လက်မှု ပညာသည်များကိုသာ အဓိကထားတဲ့ online marketplace အစ ပြုပေးခြင်းဖြစ်ပါတယ် ။ ထို့အပြင် လက်မှု ပစ္စည်းများက ပြန်ရောင်းတဲ့သူတွေနဲ့ အမြဲတမ်းနီးစပ်စေမှာ ဖြစ်ပါတယ် ။
</string>

    <string name="hint_name">ဥပမာ-ထိုင်ခုံ</string>
    <string name="hint_des">ဥပမာ-ဝါးဖြင့်ပြုလုပ်ထားသည်</string>
    <string name="hint_price">ဥပမာ-၃၀၀ဝကျပ်</string>
    <string name="hint_size">ဥပမာ-အကြီး/အ​သေး/အလတ် စသည်...</string>
    <string name="hint_qty">ဥပမာ-၂ခု</string>
    <string name="hint_deli">ဥပမာ-မရရှိနိုင်ပါ/ရနိုင်ပါသည်</string>
    <string name="hint_ph">ဥပမာ-09xxxxxxxxx</string>
    <string name="hint_add">ဥပမာ-ဇလွန်မြို့နယ်</string>


</resources>
