<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lnImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ivShowItemImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/et_margin"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnImage"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnName"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnDescription"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnPrice"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/size"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnSize"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/quantity"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnQuantity"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblDelievry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/delivery"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDelivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnDelivery"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>



            <LinearLayout
                android:id="@+id/lnAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnPhone"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/lblAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/tv_margin"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lnAddress"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnNoBuy"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="Cancel"
                    android:textColor="#fff"/>

                <Button
                    android:id="@+id/btnBuy"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="Buy"
                    android:textColor="#fff"/>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>